--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,7 @@ wheels/
 *~
 
 # Data
-data/raw/*
-data/processed/*
-!data/raw/.gitkeep
-!data/processed/.gitkeep
+raw_data*
 
 # Models
 models/*.pkl
